issue #33: improved Jenkins pipeline and fixed unit tests